# svg2b2d

./: CMakeLists.txt  README.md
projects/genimage/: svg2png.cpp
src/: base64.h  bspan.h  bspanutil.h  irender.h  parseblpath.h  svg.cpp  svg.h  svgcolors.h  svgshapes.h  svgtypes.h  svgutils.h  xmlscan.h
